--- a/thank-you.html
+++ b/thank-you.html
@@ -32,7 +32,7 @@
     <div class="container">
         <h1>Thank You! 🎉</h1>
         <p>Your message has been sent successfully.</p>
-        <p><a href="https://tar9245.github.io/Trtar/">Return to Home</a></p>
+        <p><a href="https://tar9245.github.io/tartar.html/">Return to Home</a></p>
     </div>
 </body>
 </html>
