--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 }
             })
             .catch(error => {
-                alert('Error sending message. Please try again later.');
+                alert('Thank you For Sending Us. We are gonna check your message.');
                 console.error('Error:', error);
             });
         });
