--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- FormSubmit Form -->
         <form id="contactForm" action="https://formsubmit.co/tart9245@gmail.com" method="POST">
             <!-- Required FormSubmit Parameters -->
-            <input type="hidden" name="_next" value="https://tar9245.github.io/Tattar.html/thank-you.html">
+            <input type="hidden" name="_next" value="https://tar9245.github.io/Tartar.html/thank-you.html">
             <input type="hidden" name="_subject" value="New Contact Form Submission">
             <input type="hidden" name="_captcha" value="false">
             
