--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- FormSubmit Form -->
         <form id="contactForm" action="https://formsubmit.co/tart9245@gmail.com" method="POST">
             <!-- Required FormSubmit Parameters -->
-            <input type="hidden" name="_next" value="https://tar9245.github.io/Tartar.html/thank-you.html">
+            <input type="hidden" name="_next" value="https://tar9245.github.io/tartar.html/thank-you.html">
             <input type="hidden" name="_subject" value="New Contact Form Submission">
             <input type="hidden" name="_captcha" value="false">
             
@@ -105,7 +105,7 @@
                     
                     // Redirect to thank-you page after 3 seconds
                     setTimeout(() => {
-                        window.location.href = "https://tar9245.github.io/Tartar.html/thank-you.html";
+                        window.location.href = "https://tar9245.github.io/tartar.html/thank-you.html";
                     }, 3000);
                 }
             })
@@ -115,46 +115,5 @@
             });
         });
     </script>
-</body>
-</html>
-
-and
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background: white;
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Thank You! </h1>
-        <p>Your message has been sent successfully.</p>
-        <p><a href="https://tar9245.github.io/Trtar/">Return to Home</a></p>
-    </div>
 </body>
 </html>
