--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
                 console.error('Error:', error);
             });
         });
+        // Fallback URL ထည့်ပေးပါ
+const backupUrl = 'https://raw.githubusercontent.com/yourusername/repo/main/backup.json';
     </script>
 </body>
 </html>
